--- a/client/Ciphelet/app/build.gradle
+++ b/client/Ciphelet/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.java-websocket:Java-WebSocket:1.5.1'
-    compileOnly 'org.projectlombok:lombok:1.18.16'
+    implementation 'org.projectlombok:lombok:1.18.16'
     annotationProcessor 'org.projectlombok:lombok:1.18.16'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
