Switched to kotlin Added group fetching

--- a/client/Ciphelet/app/build.gradle
+++ b/client/Ciphelet/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 29
@@ -25,6 +26,7 @@ android {
 
 repositories {
     maven { url 'https://jitpack.io' }
+    mavenCentral()
 }
 
 dependencies {
@@ -39,4 +41,6 @@ dependencies {
     implementation 'org.java-websocket:Java-WebSocket:1.5.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.github.instantwebp2p:tweetnacl-java:v1.1.2'
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
